[gd_scene load_steps=2 format=3 uid="uid://gs1qi0p3qhyn"]

[ext_resource type="Script" path="res://Scripts/Menu/end_screen_menu.gd" id="1_vdpdl"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vdpdl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -244.0
offset_right = 456.0
offset_bottom = 244.0
color = Color(0, 0, 0, 0.278431)

[node name="LevelClearedTitle" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -244.0
offset_right = 456.0
offset_bottom = 244.0

[node name="HBoxContainer" type="HBoxContainer" parent="LevelClearedTitle"]
layout_mode = 2
size_flags_horizontal = 4

[node name="LevelCleared" type="Label" parent="LevelClearedTitle/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 40
text = "Level Cleared!"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -456.0
offset_top = -38.0
offset_right = 456.0
offset_bottom = 38.0
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="TeleportInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Teleport Used: 0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelSelector" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Level Select
"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="Button" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 20
text = "Next level"

[connection signal="button_down" from="VBoxContainer/HBoxContainer/MarginContainer/LevelSelector" to="." method="_on_level_selector_button_down"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/MarginContainer2/Next" to="." method="_on_next_button_down"]
